# GNU_COMBA

./: .gitignore  .gitmodules  Makefile.in  README  configure  configure.ac  configure~  debug.txt  environment.yaml  nohup.out  vllm.sh  vllm.yaml
src/: Alpaca_+_Mistral_v3_7b_full_example-Copy1.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v3.ipynb  Alpaca_+_Mistral_v3_7b_full_example.ipynb  Alpaca_+_Mistral_v3_7b_full_example_2.ipynb  Alpaca_+_Mistral_v3_7b_full_example_3.ipynb  DatasetCompile-RankStatic.ipynb  DeepSeekPromptChat-Copy1.ipynb  DeepSeekPromptChat.ipynb  PyraNetExplore-Copy1.ipynb  PyraNetExplore-Final.ipynb  PyraNetExplore-V1_ok.ipynb  PyraNetExplore.ipynb  PyranetExport_Final.ipynb  Untitled.ipynb  main.py  module_extraction.py
src/GreenNodeSources/: Alpaca_+_Mistral_v3_7b_full_example-GreenNode.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v2.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v3.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v4.ipynb  Alpaca_+_Mistral_v3_7b_full_example-GreenNode_LoRa256_chat_v5.ipynb  conda_install.sh  init_conda.sh  vllm.sh  vllm.yaml
src/VE_Stats/: plot.csv  summary.csv
src/flow_src/: BaseProcess.py  config.json  main.py
src/flow_src/inputs/: PyranetExtractDataseByRangeOfLogicCell.json  PyranetFilterDataset.json  PyranetSynthesis.json
src/flow_src/scripts/: PyranetExtractDataseByRangeOfLogicCell.py  PyranetFilterDataset.py  PyranetSynthesis.py
src/inference_class/: inferenceclass.py
src/yosys_run/: out.json  run.sh  run2.sh  run3.sh  run4.sh  top.v
src/yosys_run/slpp_all/: file.lst  file_map.lst
src/yosys_run/slpp_all/cache/work/: top.v.slpa  top.v.slpp
src/yosys_run/slpp_all/lib/work/: top.v
utils/: s1.txt  s2.txt  s3.txt  s4.txt  skip.py  usage.txt
